--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -67,7 +67,8 @@
     </main>
 
     <footer class="mt-auto text-white-50">
-        <p>Built by Zggis - <a href="https://github.com/Zggis/plex-tvtime" class="text-white">Documentation</a></p>
+        <p th:inline="text">v[[${version}]] - Built by Zggis - <a href="https://github.com/Zggis/plex-tvtime"
+                                                                  class="text-white">Documentation</a></p>
     </footer>
 </div>
 
